add_subdirectory(qemu_gpex)
add_subdirectory(qemu_xhci)
add_subdirectory(rtl8139_pci)
add_subdirectory(virtio_gpu_gl_pci)
add_subdirectory(virtio_gpu_cl_pci)
add_subdirectory(virtio_gpu_qnn_pci)
add_subdirectory(virtio_gpu_pci)
add_subdirectory(virtio_sound_pci)
if(NOT WIN32)
    add_subdirectory(vhost_user_vsock_pci)
endif()
add_subdirectory(ivshmem_plain)
add_subdirectory(virtio_net_pci)
