add_subdirectory(exclusive-monitor)
add_subdirectory(memory)
add_subdirectory(router)
add_subdirectory(router-memory)
add_subdirectory(addrtr)
add_subdirectory(aliases)
add_subdirectory(loader)
add_subdirectory(memory-blocs)
add_subdirectory(dmi-converter)
add_subdirectory(remote)
if((NOT WITHOUT_PYTHON_BINDER) AND (NOT GS_ONLY))
    add_subdirectory(python-binder)
endif()
add_subdirectory(gs_register)
add_subdirectory(fss)
