add_subdirectory(exclusive-monitor)
add_subdirectory(memory)
add_subdirectory(router)
add_subdirectory(router-memory)
add_subdirectory(addrtr)
add_subdirectory(aliases)
add_subdirectory(loader)
add_subdirectory(memory-blocs)
add_subdirectory(dmi-converter)
add_subdirectory(remote)
if(ENABLE_PYTHON_BINDER AND (NOT GS_ONLY))
    add_subdirectory(python-binder)
endif()
add_subdirectory(gs_register)
add_subdirectory(generic_lua_model)
add_subdirectory(container_builder)

if(NOT WIN32)
    add_subdirectory(fss)
endif()
add_subdirectory(uart)
add_subdirectory(smmuv3)
