CPMAddPackage("gh:google/googletest#master")
macro(gs_add_test test)
    add_executable(${test} ${test}.cc)
    target_link_libraries(${test} PRIVATE gtest gmock uart-pl011 uart-ibex char_backend_socket char_backend_file char_backend_stdio ${TARGET_LIBS})
    add_test(NAME ${test} COMMAND ${test})
    set_tests_properties(${test} PROPERTIES TIMEOUT 10)
endmacro()
gs_add_test(file-backend-test)
gs_add_test(uart-biflow-stdio-test)
gs_add_test(uart-biflow-backend-socket-test)
gs_add_test(uart-ibex-biflow-stdio-test)
